- Feature: [#13509] [Plugin] Add ability to format strings using OpenRCT2 string framework.
- Feature: [#13512] [Plugin] Add item separators to list view.
- Feature: [#13583] Add allowed_hosts to plugin section of config.
- Feature: [#13587] Enhanced track designer with ability to add/remove scenery and footpaths.
- Change: [#13346] Change FootpathScenery to FootpathAddition in all occurrences.
- Fix: [#12895] Mechanics are called to repair rides that have already been fixed.
- Fix: [#13257] Rides that are exactly the minimum objective length are not counted.
- Fix: [#13334] Uninitialised variables in CustomTabDesc.
- Fix: [#13342] Rename tabChange to onTabChange in WindowDesc interface.
- Fix: [#13427] Newly created Go-Karts show "Race won by <blank>".
- Fix: [#13431] [Plugin] UI disabled widgets can still be interacted with.
- Fix: [#13454] Plug-ins do not load on Windows if the user directory contains non-ASCII characters.
- Fix: [#13469] Exception thrown from plugin in context.subscribe.
- Fix: [#13477] Plug-in widget tooltips do not work.
- Fix: [#13489] Mechanics continue heading to inspect broken down rides.
- Fix: [#13510] [Plugin] list view scroll resets when items is set.
- Improved: [#12917] Changed peep movement so that they stay more spread out over the full width of single tile paths.
- Improved: [#13386] A GUI error message is now displayed if the language files are missing.
- Improved: [#13587] Allow up to 128 ride objects to be selected in track designer.
- Removed: [#13423] Built-in explode guests cheat (replaced by plug-in).

0.3.2 (2020-11-01)
------------------------------------------------------------------------
- Feature: [#12110] Add Hybrid Coaster (Rocky Mountain Construction I-Box) track type.
- Feature: [#12999] .sea (RCT Classic) scenarios are now listed in the “New Scenario” dialog.
- Feature: [#13000] objective_options command for console.
- Feature: [#13096] Add Esperanto translation.