@@ -125,11 +125,11 @@ namespace RCT1
             TERRAIN_MARTIAN,
             TERRAIN_CHECKERBOARD,
             TERRAIN_GRASS_CLUMPS,
-            TERRAIN_DIRT,                 // Originally TERRAIN_ROOF_BROWN
+            TERRAIN_ROOF_BROWN,                 
             TERRAIN_ICE,
-            TERRAIN_DIRT,                 // Originally TERRAIN_ROOF_LOG
-            TERRAIN_DIRT,                 // Originally TERRAIN_ROOF_IRON
-            TERRAIN_ROCK,                 // Originally TERRAIN_ROOF_GREY
+            TERRAIN_ROOF_LOG,                 
+            TERRAIN_ROOF_IRON,                 
+            TERRAIN_ROOF_GREY,                 
             TERRAIN_GRID_RED,
             TERRAIN_GRID_YELLOW,
             TERRAIN_GRID_BLUE,
